internal and legacy api with tests
